2004-06-21 Magnus Hagdorn
 * add append option to CF_createfile.py

2004-06-21 Ian Rutt
 * Added -f option to add_projinfo.py to allow overwriting
   of existing projection data, if desired.

2004-06-18 Magnus Hagdorn
 * override colourmaps

2004-06-18 Magnus Hagdorn
 * need to also create unused dimensions

2004-06-18 Magnus Hagdorn
 * make a disitinction between polar stereographic and general stereographic
   projections.

2004-06-17 Magnus Hagdorn
 * added aspect ratio to CF_file.py
 * added check for number of arguments (CF_options.py, CF_area.py)
 * added papersize, nvars, ntimes to CF_options.py
 * added new program plotCFvar.py
	
2004-06-17 Magnus Hagdorn
 * projmodule.c: massive change. The extension module provides a 
   projection type, with lots of methods to do proj4 projections
 * CF_proj.py: use new proj module
 * CFcreatefile and CFloadfile both inherit from the new CFfile class,
   they all provide the same meta data. (CF_file.py, CF_createfile.py, CF_loadfile.py)
 * create_topo.py: use new CFcreatefile class
 * add_projinfo.py: add grid_mapping attribute to all variables containing x and y in the
   dimension string

2004-06-15 Magnus Hagdorn
 * added clipping

2004-06-15 Magnus Hagdorn
 * install data files and programs (setup.py)
 * added colourmaps
 * CF_createfile.py: look for ncdf_vars.def in GLIMMER_PREFIX

2004-06-14 Magnus Hagdorn
 * added shared command line option parser

2004-06-14 Magnus Hagdorn
 * rename false_westing to false_easting
   (CF_proj.py, add_projinfo.py, create_topo.py)

2004-06-14 Magnus Hagdorn
 * added colour maps
	
2004-06-14 Magnus Hagdorn
 * CF_loadfile.py: added variable class
 * CF_area.py: first test of plotting images and contour lines
	
2004-06-13 Magnus Hagdorn
 * CF_proj.py: made scale_factor_at_projection_origin optional and added a 
   function for projecting points
 * CF_loadfile.py: Class for loading a CF file
 * CF_area.py: Class for visualising CF data sets
	
2004-06-13 Magnus Hagdorn